[workspace]
members = [
    "conrod_core",
    "conrod_derive",
    "backends/conrod_example_shared",
    "backends/conrod_winit",
    "backends/conrod_gfx",
    "backends/conrod_glium",
    "backends/conrod_piston",
    "backends/conrod_vulkano",
    "backends/conrod_ggez",
    "backends/conrod_crayon",
    "backends/conrod_svg",
]
