[package]
name = "conrod_core"
version = "0.65.0"
authors = [
    "Mitchell Nordine <mitchell.nordine@gmail.com>",
    "Sven Nilsen <bvssvni@gmail.com>"
]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "An easy-to-use, 100% Rust, extensible 2D GUI library."
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/pistondevelopers/conrod.git"
homepage = "https://github.com/pistondevelopers/conrod"
documentation = "http://docs.piston.rs/conrod/conrod/"
categories = ["gui"]

[package.metadata.docs.rs]
all-features = true

[features]
stdweb = [ "instant/stdweb" ]
wasm-bindgen = [ "instant/wasm-bindgen" ]

[dependencies]
conrod_derive = { path = "../conrod_derive", version = "0.65" }
daggy = "0.5"
fnv = "1.0"
num = "0.2"
pistoncore-input = "0.24"
rusttype = { version = "0.7", features = ["gpu_cache"] }
instant =  {path="../../wasm/instant", version="0.1.1", features = [ "wasm-bindgen","now" ]}
