[package]
name = "conrod_derive"
version = "0.65.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "A crate providing procedural macros for the conrod library"
license = "MIT OR Apache-2.0"
keywords = ["conrod", "gui", "derive", "procedural", "macro"]
repository = "https://github.com/pistondevelopers/conrod.git"
homepage = "https://github.com/pistondevelopers/conrod"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.2"
quote = "0.6"
syn = { version = "0.15", features = ["extra-traits", "full"] }
