[package]
name = "conrod_widgets"
version = "0.62.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "A crate providing procedural macros for the conrod library"
license = "MIT OR Apache-2.0"
keywords = ["conrod", "gui", "derive", "procedural", "macro"]
repository = "https://github.com/pistondevelopers/conrod.git"
homepage = "https://github.com/pistondevelopers/conrod"

edition = "2018"

[dependencies]
conrod_core = {path = "../conrod_core"}
num = "0.2"