[package]
name = "conrod_crayon"
version = "0.65.0"
authors = ["Mitchell Nordine <mitchell.nordine@gmail.com>"]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "An easy-to-use, 100% Rust, extensible 2D GUI library."
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/pistondevelopers/conrod.git"
homepage = "https://github.com/pistondevelopers/conrod"
documentation = "https://docs.rs/conrod"
categories = ["gui"]

[lib]
name = "conrod_crayon"
path = "./src/lib.rs"

[dependencies]
conrod_core = { path = "../../conrod_core", version = "0.65" }
crayon = { path = "../../../wasm/crayon"}
conrod_example_shared = { path = "../conrod_example_shared", version = "0.65" }
serde_json = "1.0"
crayon_bytes = { path = "../../../wasm/crayon/modules/bytes"}
cgmath = "0.16.1"
instant =  {path="../../../wasm/instant", version="0.1.1", features = [ "wasm-bindgen","now" ]}
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.47"

