[package]
name = "conrod_gfx"
version = "0.65.0"
authors = ["Mitchell Nordine <mitchell.nordine@gmail.com>"]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "An easy-to-use, 100% Rust, extensible 2D GUI library."
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/pistondevelopers/conrod.git"
homepage = "https://github.com/pistondevelopers/conrod"
documentation = "https://docs.rs/conrod"
categories = ["gui"]

[lib]
name = "conrod_gfx"
path = "./src/lib.rs"

[dependencies]
conrod_core = { path = "../../conrod_core", version = "0.65" }
gfx = { version = "0.17" }
gfx_core = { version = "0.8" }

[dev-dependencies]
conrod_example_shared = { path = "../conrod_example_shared", version = "0.65" }
conrod_winit = { path = "../conrod_winit", version = "0.65" }
find_folder = "0.3.0"
image = "0.21"
petgraph = "0.4"
## glutin_gfx.rs example dependencies
gfx_window_glutin = "0.28"
glutin = "0.19"
winit = "0.18"
