[package]
name = "conrod_gfx"
version = "0.71.0"
authors = ["Mitchell Nordine <mitchell.nordine@gmail.com>"]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "An easy-to-use, 100% Rust, extensible 2D GUI library."
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/pistondevelopers/conrod.git"
homepage = "https://github.com/pistondevelopers/conrod"
categories = ["gui"]

[lib]
name = "conrod_gfx"
path = "./src/lib.rs"

[dependencies]
conrod_core = { path = "../../conrod_core", version = "0.71" }
gfx = { version = "0.18" }
gfx_core = { version = "0.9" }

[dev-dependencies]
conrod_example_shared = { path = "../conrod_example_shared", version = "0.71" }
conrod_winit = { path = "../conrod_winit", version = "0.71" }
find_folder = "0.3.0"
image = "0.22"
petgraph = "0.4"
## glutin_gfx.rs example dependencies
gfx_window_glutin = "0.31"
glutin = "0.21"
winit = "0.19"
