[package]
name = "conrod_ggez"
version = "0.65.0"
authors = ["Mitchell Nordine <mitchell.nordine@gmail.com>"]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "An easy-to-use, 100% Rust, extensible 2D GUI library."
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/pistondevelopers/conrod.git"
homepage = "https://github.com/pistondevelopers/conrod"
documentation = "https://docs.rs/conrod"
categories = ["gui"]

[lib]
name = "conrod_ggez"
path = "./src/lib.rs"

[dependencies]
conrod_core = { path = "../../conrod_core", version = "0.65" }
gfx = { version = "0.17" }
gfx_core = { version = "0.8" }
gfx_device_gl = "0.15"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ggez = { git = "https://github.com/ozkriff/ggez", rev = "a23153a18" }
conrod_winit = { path = "../conrod_winit", version = "0.65" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
good-web-game = { git="https://github.com/not-fl3/good-web-game"}
stdweb = "0.4.12"

[dev-dependencies]
conrod_example_shared = { path = "../conrod_example_shared", version = "0.65" }
find_folder = "0.3.0"
image = "0.19"
petgraph = "0.4"
## glutin_gfx.rs example dependencies