[package]
name = "conrod_piston"
version = "0.62.0"
authors = [
    "Mitchell Nordine <mitchell.nordine@gmail.com>",
    "Sven Nilsen <bvssvni@gmail.com>"
]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "An easy-to-use, 100% Rust, extensible 2D GUI library."
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/pistondevelopers/conrod.git"
homepage = "https://github.com/pistondevelopers/conrod"
documentation = "https://docs.rs/conrod"
categories = ["gui"]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "conrod_piston"
path = "./src/lib.rs"

[dependencies]
conrod_core = { path = "../../conrod_core", version = "0.62" }
piston2d-graphics = { version = "0.28" }
pistoncore-input = "0.23.0"
piston_window = "0.85"

[dev-dependencies]
conrod_example_shared = { path = "../conrod_example_shared", version = "0.62" }
find_folder = "0.3.0"
image = "0.20"
petgraph = "0.4"
