[package]
name = "conrod_piston"
version = "0.71.0"
authors = [
    "Mitchell Nordine <mitchell.nordine@gmail.com>",
    "Sven Nilsen <bvssvni@gmail.com>"
]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "An easy-to-use, 100% Rust, extensible 2D GUI library."
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/pistondevelopers/conrod.git"
homepage = "https://github.com/pistondevelopers/conrod"
categories = ["gui"]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "conrod_piston"
path = "./src/lib.rs"

[dependencies]
conrod_core = { path = "../../conrod_core", version = "0.71" }
piston2d-graphics = { version = "0.37" }
pistoncore-input = "1.0.0"

[dev-dependencies]
conrod_example_shared = { path = "../conrod_example_shared", version = "0.71" }
find_folder = "0.3.0"
image = "0.23"
petgraph = "0.4"
piston_window = "0.113"
