[package]
name = "conrod_sdl2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conrod_core = { path = "../../conrod_core", version = "0.71" }
thiserror = "1.0.30"
sdl2 = { version = "0.35.1", features = ["gfx", "image"] }

[dev-dependencies]
conrod_example_shared = { path = "../conrod_example_shared", version = "0.71" }
find_folder = "0.3.0"
