[package]
name = "conrod_sdl2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
conrod_core = { path = "../../conrod_core", version = "0.76" }
thiserror = "1.0.30"
sdl2 = { version = "0.35.1", features = ["gfx", "image"] }

[dev-dependencies]
conrod_example_shared = { path = "../conrod_example_shared", version = "0.76" }
find_folder = "0.3.0"
