[package]
name = "conrod_svg"
version = "0.65.0"
authors = ["Mitchell Nordine <mitchell.nordine@gmail.com>"]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "An easy-to-use, 100% Rust, extensible 2D GUI library."
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/pistondevelopers/conrod.git"
homepage = "https://github.com/pistondevelopers/conrod"
documentation = "https://docs.rs/conrod"
categories = ["gui"]

[lib]
name = "conrod_svg"
path = "./src/lib.rs"

[dependencies]
conrod_core = { path = "../../conrod_core", version = "0.65" }
conrod_example_shared = { path = "../conrod_example_shared", version = "0.65" }
svg = "0.5.12"
serde_json = "1.0"
cgmath = "0.16.1"
