[package]
name = "conrod_vulkano"
version = "0.71.0"
authors = [
    "mitchmindtree <mitchell.nordine@gmail.com>",
    "Kurble",
    "Abendstolz",
]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "An easy-to-use, 100% Rust, extensible 2D GUI library."
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/pistondevelopers/conrod.git"
homepage = "https://github.com/pistondevelopers/conrod"
categories = ["gui"]
edition = "2018"

[dependencies]
conrod_core = { path = "../../conrod_core", version = "0.71" }
vulkano = "0.16"
vulkano-shaders = "0.16"

[dev-dependencies]
conrod_example_shared = { path = "../conrod_example_shared", version = "0.71" }
conrod_winit = { path = "../conrod_winit", version = "0.71" }
find_folder = "0.3"
image = "0.22"
vulkano-win = "0.16"
winit = "0.19"
