[package]
name = "conrod_winit_backend"
version = "0.62.0"
authors = [
    "Mitchell Nordine <mitchell.nordine@gmail.com>",
    "Sven Nilsen <bvssvni@gmail.com>"
]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "An easy-to-use, 100% Rust, extensible 2D GUI library."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pistondevelopers/conrod.git"
homepage = "https://github.com/pistondevelopers/conrod"
documentation = "http://docs.piston.rs/conrod/conrod/"
categories = ["gui"]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "conrod_winit_backend"
path = "./src/lib.rs"

[dependencies]
conrod_core = {path = "../../core"}
winit = { version = "0.16" }
