[package]

name = "all_widgets"
version = "0.0.0"
authors = ["Mitchell Nordine <mitchell.nordine@gmail.com>"]

[[bin]]

name = "all_widgets"
path = "./all_widgets.rs"

[dependencies.conrod]

path = "../../"

[dependencies.sdl2_window]

git = "https://github.com/PistonDevelopers/sdl2_window.git"

[dependencies.graphics]

git = "https://github.com/PistonDevelopers/graphics.git"

[dependencies.opengl_graphics]

git = "https://github.com/PistonDevelopers/opengl_graphics.git"

[dependencies.vecmath]

git = "https://github.com/PistonDevelopers/vecmath.git"

