[package]

name = "gfx_text"
version = "0.0.0"
authors = ["Mitchell Nordine <mitchell.nordine@gmail.com>"]

[[bin]]

name = "gfx_text"
path = "./gfx_text.rs"

[dependencies.conrod]

path = "../../"

[dependencies.sdl2_window]

git = "https://github.com/PistonDevelopers/sdl2_window.git"

[dependencies.graphics]

git = "https://github.com/PistonDevelopers/graphics.git"

[dependencies.gfx_graphics]

git = "https://github.com/PistonDevelopers/gfx_graphics.git"

[dependencies.vecmath]

git = "https://github.com/PistonDevelopers/vecmath.git"

