[package]
name = "conrod-piston_window"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
keywords = ["ui", "widgets", "piston", "gfx"]
description = "A piston_window backend for conrod."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pistondevelopers/conrod.git"
homepage = "https://github.com/pistondevelopers/conrod"
documentation = "http://docs.piston.rs/conrod/conrod/"

[dependencies]
conrod = "0.31.3"
piston_window = "0.33.0"
